--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <a href="category.html" class="nav-item nav-link">الاخبار</a>
                     <a href="single.html" class="nav-item nav-link">منوعات ومقالات</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">الفئان</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">الفئات الاخبارية</a>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="#" class="dropdown-item">سياسة</a>
                             <a href="#" class="dropdown-item">اقتصاد</a>
@@ -515,7 +515,7 @@
                                     <div class="d-flex justify-content-between bg-white border-top mt-auto p-4">
                                         <div class="d-flex align-items-center">
                                             <img class="rounded-circle mr-2" src="img/hhhhhhhhhhhhhh.jpg" width="25" height="25" alt="">
-                                            <small>خديجة علي اسماعيل</small>
+                                            <small>خديجة علي  موسي</small>
                                         </div>
                                         <div class="d-flex align-items-center">
                                             <small class="ml-3"><i class="far fa-eye mr-2"></i>12345</small>
@@ -610,7 +610,7 @@
                     <!-- Ads Start -->
                     <div class="mb-3">
                         <div class="section-title mb-0">
-                            <h4 class="m-0 text-uppercase font-weight-bold">أعلان</h4>
+                            <h4 class="m-0 text-uppercase font-weight-bold"> مادة أعلانية </h4>
                         </div>
                         <div class="bg-white text-center border border-top-0 p-3">
                             <a href=""><img class="img-fluid" src="img/ةووووووو.jpg" alt=""></a>
@@ -742,7 +742,7 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="mb-4 text-white text-uppercase font-weight-bold">اخبار شعبية</h5>
+                <h5 class="mb-4 text-white text-uppercase font-weight-bold">اخبار عامة</h5>
                 <div class="mb-3">
                     <div class="mb-2">
                         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">سياسة</a>
@@ -817,7 +817,7 @@
         </div>
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5" style="background: #090909;">
-        <p class="m-0 text-center">&copy; <a href="#">مشروع التخرج لطلاب (It)sabfs</a>. من انشاء (النعيم عبد الجليل)(محمد اسماعيل)(عارف احمد الريح)(خديجة علي اسماعيل). 
+        <p class="m-0 text-center">&copy; <a href="#">مشروع التخرج لطلاب (It)sabfs</a>. من تصميم (النعيم عبد الجليل الجاك)(محمد اسماعيل)(عارف احمد الريح)(خديجة علي موسي). 
 		
 		<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 		...<a href="https://htmlcodex.com">with  our luck</a></p>
