--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                     <a href="category.html" class="nav-item nav-link">اخبار</a>
                     <a href="single.html" class="nav-item nav-link">مقالات ومنوعات</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">الفئات</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"> الفئات الاخبارية</a>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="#" class="dropdown-item">سياسة</a>
                             <a href="#" class="dropdown-item">اقتصاد</a>
@@ -338,7 +338,7 @@
         </div>
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5" style="background: #111111;">
-        <p class="m-0 text-center">&copy; <a href="#">مشروع التخرج لطلاب (It)sabfs</a>.من انشاء (النعيم عبد الجليل)(محمد اسماعيل)(عارف احمد الريح)(خديجة علي اسماعيل) 
+        <p class="m-0 text-center">&copy; <a href="#">مشروع التخرج لطلاب (It)sabfs</a>.من انشاء (النعيم عبد الجليل)(محمد اسماعيل)(عارف احمد الريح)(خديجة علي موسي) 
 		
 		<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 		 <a href="https://htmlcodex.com">with our luck</a></p>
