--- a/category.html
+++ b/category.html
@@ -101,7 +101,7 @@
                     <a href="category.html" class="nav-item nav-link active">اخبار</a>
                     <a href="single.html" class="nav-item nav-link">منوعات و مقالات</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">الفئات</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">الفئات الاخبارية</a>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="#" class="dropdown-item">سياسة</a>
                             <a href="#" class="dropdown-item">اقتصاد</a>
@@ -226,7 +226,7 @@
                                 <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                     <div class="d-flex align-items-center">
                                         <img class="rounded-circle mr-2" src="img/download (1).png" width="25" height="25" alt="">
-                                        <small>خديجة علي</small>
+                                        <small>خديجة علي موسي</small>
                                     </div>
                                     <div class="d-flex align-items-center">
                                         <small class="ml-3"><i class="far fa-eye mr-2"></i>12345</small>
@@ -602,7 +602,7 @@
         </div>
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5" style="background: #111111;">
-        <p class="m-0 text-center">&copy; <a href="#">مشروع التخرج لطلاب (It)sabfs</a>.من انشاء (النعيم عبد الجليل)(محمد اسماعيل)(عارف احمد الريح)(خديجة علي اسماعيل) 
+        <p class="m-0 text-center">&copy; <a href="#">مشروع التخرج لطلاب (It)sabfs</a>.من انشاء (النعيم عبد الجليل الجاك)(محمد اسماعيل)(عارف احمد الريح)(خديجة علي موسي) 
 		
 		<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 		<a href="https://htmlcodex.com">width our luck</a></p>
