--- a/single.html
+++ b/single.html
@@ -542,7 +542,7 @@
         </div>
     </div>
     <div class="container-fluid py-4 px-sm-3 px-md-5" style="background: #111111;">
-        <p class="m-0 text-center">&copy; <a href="#">مشروع التخرج لطلاب (It)sabfs</a>.من انشاء (النعيم عبد الجليل)(محمد اسماعيل)(عارف احمد الريح)(خديجة علي اسماعيل) 
+        <p class="m-0 text-center">&copy; <a href="#">مشروع التخرج لطلاب (It)sabfs</a>.من انشاء (النعيم عبد الجليل الجاك)(محمد اسماعيل)(عارف احمد الريح)(خديجة علي اسماعيل) 
 		
 		<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 		 <a href="https://htmlcodex.com">with our luck</a></p>
