--- a/category.html
+++ b/category.html
@@ -580,22 +580,22 @@
                 <h5 class="mb-4 text-white text-uppercase font-weight-bold">صور</h5>
                 <div class="row">
                     <div class="col-4 mb-3">
-                        <a href=""><img class="w-100" src="img/دهب.webp" height="150" width="150"></a>
+                        <a href=""><img class="w-100" src="img/دهب.webp" height="100" width="100"></a>
                     </div>
                     <div class="col-4 mb-3">
-                        <a href=""><img class="w-100" src="img/دوري.webp"  height="150" width="150"></a>
+                        <a href=""><img class="w-100" src="img/دوري.webp"  height="100" width="100"></a>
                     </div>
                     <div class="col-4 mb-3">
-                        <a href=""><img class="w-100" src="img/جبريل.webp"  height="150" width="150"></a>
+                        <a href=""><img class="w-100" src="img/جبريل.webp"  height="100" width="100"></a>
                     </div>
                     <div class="col-4 mb-3">
-                        <a href=""><img class="w-100" src="img/قهوة.webp"  height="150" width="150"></a>
+                        <a href=""><img class="w-100" src="img/قهوة.webp"  height="100" width="100"></a>
                     </div>
                     <div class="col-4 mb-3">
-                        <a href=""><img class="w-100" src="img/عملة.jpeg"  height="150" width="150"></a>
+                        <a href=""><img class="w-100" src="img/عملة.jpeg"  height="100" width="100"></a>
                     </div>
                     <div class="col-4 mb-3">
-                        <a href=""><img class="w-100" src="img/خرطووم.jpeg"  height="150" width="150"></a>
+                        <a href=""><img class="w-100" src="img/عمتة.jpeg"  height="100" width="100"></a>
                     </div>
                 </div>
             </div>
